# MARS-TCG-Rust

./: Cargo.toml  README.md
benches/: bench.rs
src/: extra.rs  hw_ascon.rs  hw_sha2.rs  hw_she.rs  lib.rs  main.rs
